# Carbon-Cost-Optimizer-Agentic-AI

./: .env.example  .gitignore  Logs  Makefile  README.md  app.py  cdk.json  pyproject.toml  requirements-lambda.txt
Carbon & Cost Optimizer/: ARCHITECTURE.md
agent/: main.py  scoring.py
infra/stacks/: cco_stack.py
mcp_server/: app.py  config.py
mcp_server/tools/: carbon_intensity.py  job_status.py  scheduler.py  spot_prices.py  training_job.py
scripts/: setup_secrets.py  verify_config.py
tests/: conftest.py  test_carbon_intensity.py  test_job_status.py  test_mcp_server.py  test_scheduler.py  test_scoring.py  test_spot_prices.py  test_training_job.py
