[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carbon-cost-optimizer"
version = "0.1.0"
description = "Carbon- & Cost-Aware SageMaker Training Orchestrator Agent"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "boto3>=1.34",
    "strands-agents>=0.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "aws-cdk-lib>=2.150",
    "constructs>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "moto[ec2,s3,sagemaker,secretsmanager,ssm,events,scheduler]>=5.0",
    "respx>=0.21",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "black>=24.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "agent", "infra"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
